--- a/sim.html
+++ b/sim.html
@@ -14,5 +14,6 @@
 <body>
     <h1>Que bom que você quer ser nosso professor</h1>
     <p>Agora você poderá nos ensinar a fazer programas que nem você</p>
+    <div class="img"><img src="joia.png" alt="oi"></div>
 </body>
 </html>
