--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Bem vindo ao 2ºDS</h1>
     <p>Você quer ser nosso novo professor?</p>
-    <div class="img"><img src="nerd.png" alt="nerd"></div>
+    <div id="ig">
+        <audio src="nerd.mp3" controls></audio>
+    </div>
+    <div id="img"><img src="nerd.png" alt="nerd"></div>
     <div>
         <button id="sim" type="button"><a href="sim.html"><strong>SIM</strong></a></button>
         <label for="sim"><button id="nao" type="button"><a href="sim.html"><strong>NÃO</strong></a></button></label>
